# MediaPlayer

./: .dockerignore  .gitignore  .prettierrc  AGENTS.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.android  Dockerfile.core  Dockerfile.qt  Masterplan.MD  Plan.MD  README.md  Self_Reflection.md  Task.md  Tasks.MD  Tasks_Plan  parallel_tasks.md
src/android/app/: CMakeLists.txt  build.gradle
src/android/app/src/main/: AndroidManifest.xml
src/core/: CMakeLists.txt  README.md
src/core/include/: MediaPlayer.h
src/core/include/mediaplayer/: AITagClient.h  AudioDecoder.h  AudioEffect.h  AudioOutput.h  AudioOutputAndroid.h  AudioOutputCoreAudio.h  AudioOutputPulse.h  AudioOutputWASAPI.h  AudioOutputiOS.h  BufferedReader.h  ComPtr.h  Direct3D11VideoOutput.h  FramePool.h  MediaDecoder.h  MediaDemuxer.h  MediaMetadata.h  MediaPlayer.h  MetalVideoOutput.h  NullAudioOutput.h  NullVideoOutput.h  OpenGLVideoOutput.h  PacketQueue.h  PlaybackCallbacks.h  PlaylistManager.h  RingBuffer.h  SimpleFFT.h  SubtitleDecoder.h  VideoDecoder.h  VideoFrame.h  VideoFrameQueue.h  VideoOutput.h  Visualizer.h
src/core/src/: AITagClient.cpp  AudioDecoder.cpp  AudioOutputAndroid.cpp  AudioOutputCoreAudio.mm  AudioOutputPulse.cpp  AudioOutputWASAPI.cpp  AudioOutputiOS.mm  BufferedReader.cpp  Direct3D11VideoOutput.cpp  FramePool.cpp  MediaDemuxer.cpp  MediaPlayer.cpp  MetalVideoOutput.mm  NullAudioOutput.cpp  OpenGLVideoOutput.cpp  PacketQueue.cpp  PlaylistManager.cpp  RingBuffer.cpp  SubtitleDecoder.cpp  VideoDecoder.cpp  VideoFrameQueue.cpp  yuv.frag  yuv.vert
src/desktop/: AudioOutputQt.cpp  AudioOutputQt.h  CMakeLists.txt  FormatConverterQt.cpp  FormatConverterQt.h  LibraryQt.cpp  LibraryQt.h  LibraryView.qml  README.md  VideoOutputQt.cpp  VideoOutputQt.h  VisualizerItem.cpp  VisualizerItem.h  VisualizerQt.cpp  VisualizerQt.h  VisualizerView.qml
src/desktop/app/: AudioDevicesModel.cpp  AudioDevicesModel.h  CMakeLists.txt  LibraryModel.cpp  LibraryModel.h  MediaPlayerController.cpp  MediaPlayerController.h  MicrophoneInput.cpp  MicrophoneInput.h  MouseGestureFilter.cpp  MouseGestureFilter.h  NowPlayingModel.cpp  NowPlayingModel.h  PlaylistModel.cpp  PlaylistModel.h  README.md  SettingsManager.cpp  SettingsManager.h  SmartPlaylistManager.cpp  SmartPlaylistManager.h  SyncController.cpp  SyncController.h  TranslationManager.cpp  TranslationManager.h  VideoItem.cpp  VideoItem.h  app.qrc  main.cpp
src/desktop/app/installers/linux/: build_appimage.sh
src/desktop/app/installers/macos/: package.sh
src/desktop/app/installers/windows/: package.ps1  (+1 more)
src/desktop/app/linux/: Mpris.cpp  Mpris.h
src/desktop/app/macos/: MacIntegration.mm  TouchBar.h  TouchBar.mm
src/desktop/app/qml/: DevicesView.qml  LibraryView.qml  Main.qml  NowPlayingView.qml  PlaylistItemsDialog.qml  PlaylistItemsView.qml  PlaylistView.qml  SettingsDialog.qml  SmartPlaylistEditor.qml  VideoPlayer.qml  VisualizationView.qml
src/desktop/app/template/: CMakeLists.txt  main.cpp
src/desktop/app/translations/: player_en.ts  player_es.ts
src/desktop/app/windows/: Hotkeys.cpp  Hotkeys.h  WinIntegration.cpp
src/format_conversion/: CMakeLists.txt  README.md
src/format_conversion/include/mediaplayer/: AudioConverter.h  EncodeOptions.h  FormatConverter.h  VideoConverter.h
src/format_conversion/src/: AudioConverter.cpp  FormatConverter.cpp  VideoConverter.cpp  mediaconvert.cpp
src/gesture_voice/vosk/: CMakeLists.txt
src/gesture_voice/vosk/src/: VoiceInputQt.cpp  VoskRecognizer.cpp
src/network/: CMakeLists.txt  README.md  youtube_resolve.py
src/network/include/mediaplayer/: DashStream.h  HlsStream.h  InternetRadio.h  InternetRadioStream.h  NetworkStream.h  NetworkUtils.h  ProtocolSupport.h  YouTubeDL.h  YouTubeDl.h  YouTubeResolver.h  YoutubeDL.h  YoutubeResolver.h
src/network/src/: DashStream.cpp  HlsStream.cpp  InternetRadio.cpp  InternetRadioStream.cpp  NetworkStream.cpp  NetworkUtils.cpp  ProtocolSupport.cpp  YouTubeDL.cpp  YouTubeDl.cpp  YouTubeResolver.cpp  YoutubeDL.cpp  YoutubeResolver.cpp
src/network/src/remote/: RemoteControlClient.cpp  RemoteControlServer.cpp
src/network/src/upnp/: DlnaClient.cpp
src/subtitles/: CMakeLists.txt  README.md
src/subtitles/include/mediaplayer/: SrtParser.h  SubtitleProvider.h
src/subtitles/src/: SrtParser.cpp  SubtitleProvider.cpp
src/sync/: CMakeLists.txt  README.md
src/sync/include/mediaplayer/: SyncService.h
src/sync/src/: SyncService.cpp
src/sync/src/cloud/: CloudSyncService.cpp
src/sync/src/mdns/: MdnsService.cpp
src/visualization/: CMakeLists.txt  README.md
src/visualization/include/mediaplayer/: BasicVisualizer.h  ProjectMVisualizer.h
src/visualization/src/: BasicVisualizer.cpp  ProjectMVisualizer.cpp
tests/: CMakeLists.txt  README.md  ai_tagging_test.py  check_formats.py  core_unit_tests.cpp  end_to_end.py  end_to_end_automation.py  format_compatibility.py  format_conversion_test.cpp  format_converter_test.cpp  format_probe.cpp  formats_list.txt  hls_stream_test.cpp  library_autoplaylist_test.cpp  library_cleanup_test.cpp  library_db_test.cpp  library_db_tests.cpp  library_db_update_test.cpp  library_ftssearch_test.cpp  library_ignore_nonmedia_test.cpp  library_invalid_filter_test.cpp  library_playback_update_test.cpp  library_playlist_test.cpp  library_purge_removed_test.cpp  library_rating_test.cpp  library_recommender_test.cpp  library_rescan_update_test.cpp  library_search_test.cpp  library_smartplaylist_test.cpp  library_smartquery_test.cpp  library_video_metadata_test.cpp  library_video_notag_index_test.cpp  mdns_service_test.cpp  network_protocol_test.cpp  network_stream_test.cpp  playback_integration_test.cpp  remote_control_test.cpp  run_regression_suite.sh  startup_time_test.cpp  stress_load_test.cpp  (+8 more)
tests/gesture/: MouseGestureFilterTest.cpp  README.md
tests/ios/: MediaPlayerViewModelTests.swift  UITests.swift
tests/mobile/: README.md  android_battery_test.sh
tests/performance/: README.md  memory_cpu_profile.sh
tests/sample_media/: README.md
tests/sync/: test_sync_local.py
tests/voice_sim/: README.md  run.py
(+117 files in other folders)
